<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".client.risks.SettingUpRiskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/light_gray">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="17dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    app:cardCornerRadius="25dp">

                    <TextView
                        android:id="@+id/charMagnitudeOfRisk"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#00FF00"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:shadowColor="@color/black"
                        android:shadowRadius="5"
                        android:text="L"
                        android:textColor="@color/white"
                        android:textSize="34sp"
                        tools:ignore="TextContrastCheck" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/textViewRiskName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:ems="10"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        android:text="Название"
                        android:textColor="@color/white"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/textViewMagnitudeOfRisk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:text="@string/maginitudeOfRisk"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        tools:ignore="TextContrastCheck" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Тип риска"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/spinnerRiskType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/dark_gray"
                app:cardCornerRadius="0dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    app:cardCornerRadius="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardBackgroundColor="@color/light_gray"
                            app:cardCornerRadius="7dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="5dp"
                                android:orientation="horizontal">

                                <androidx.cardview.widget.CardView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    app:cardCornerRadius="25dp">

                                    <TextView
                                        android:id="@+id/textViewProbabilityOfOccurrence"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:background="#00FF00"
                                        android:gravity="center"
                                        android:shadowColor="@color/black"
                                        android:shadowRadius="5"
                                        android:text="0"
                                        android:textColor="@color/white"
                                        tools:ignore="TextContrastCheck" />
                                </androidx.cardview.widget.CardView>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="5dp"
                                        android:text="@string/assessmentOfTheLikelihoodOfOccurrence"
                                        android:textColor="@color/white"
                                        android:textSize="14sp"
                                        tools:ignore="TextContrastCheck" />

                                    <SeekBar
                                        android:id="@+id/seekBarProbabilityOfOccurrence"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content" />

                                </LinearLayout>
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardViewChangedVisible"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:visibility="visible"
                            app:cardBackgroundColor="@color/light_gray"
                            app:cardCornerRadius="7dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="5dp"
                                android:orientation="horizontal">

                                <androidx.cardview.widget.CardView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:layout_gravity="center"
                                    app:cardCornerRadius="25dp">

                                    <TextView
                                        android:id="@+id/textViewProbabilityOfFinding"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:background="#00FF00"
                                        android:gravity="center"
                                        android:shadowColor="@color/black"
                                        android:shadowRadius="5"
                                        android:text="0"
                                        android:textColor="@color/white"
                                        android:textSize="16sp"
                                        tools:ignore="TextContrastCheck" />
                                </androidx.cardview.widget.CardView>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="5dp"
                                        android:text="@string/detectionProbabilityEstimate"
                                        android:textColor="@color/white"
                                        android:textSize="14sp"
                                        tools:ignore="TextContrastCheck" />

                                    <SeekBar
                                        android:id="@+id/seekBarProbabilityOfFinding"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content" />
                                </LinearLayout>
                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            app:cardBackgroundColor="@color/light_gray"
                            app:cardCornerRadius="7dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="5dp"
                                android:orientation="horizontal">

                                <androidx.cardview.widget.CardView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    app:cardCornerRadius="25dp">

                                    <TextView
                                        android:id="@+id/textViewSeverityAssessment"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:background="#00FF00"
                                        android:gravity="center"
                                        android:shadowColor="@color/black"
                                        android:shadowRadius="5"
                                        android:text="0"
                                        android:textColor="@color/white"
                                        tools:ignore="TextContrastCheck" />
                                </androidx.cardview.widget.CardView>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">


                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="5dp"
                                        android:text="@string/severityAssessment"
                                        android:textColor="@color/white"
                                        android:textSize="14sp"
                                        tools:ignore="TextContrastCheck" />

                                    <SeekBar
                                        android:id="@+id/seekBarSeverityAssessment"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content" />
                                </LinearLayout>
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dim_gray"
            app:cardBackgroundColor="@color/dark_gray"
            app:cardCornerRadius="0dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_weight="11"
                app:cardBackgroundColor="@color/light_gray">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvRiskMinimizationMeasure"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="2">

                    </androidx.recyclerview.widget.RecyclerView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/floatingBackRisk"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="0"
                            android:clickable="true"
                            android:src="@drawable/abc_vector_test"
                            tools:ignore="SpeakableTextPresentCheck" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:gravity="end"
                            android:orientation="horizontal">

                            <com.google.android.material.floatingactionbutton.FloatingActionButton
                                android:id="@+id/buttonRiskCreateMinimizationMeasure"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                android:clickable="true"
                                android:contentDescription="TODO"
                                android:src="@android:drawable/ic_input_add"
                                tools:ignore="SpeakableTextPresentCheck" />

                            <com.google.android.material.floatingactionbutton.FloatingActionButton
                                android:id="@+id/buttonSaveRisk"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                android:clickable="true"
                                android:src="@android:drawable/ic_menu_save"
                                tools:ignore="SpeakableTextPresentCheck" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewRiskDegradedMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="20"
        android:text="@string/degradedMode"
        android:textColor="#33696969"
        android:textSize="20sp"
        android:translationY="150dp"
        android:visibility="gone" />

</FrameLayout>